tests/ixml_not_011_simple_fail.test
START
s = vp.
vp = 'a', ![L], ~[].
INPUT
ab
OUTPUT
ixml(ixml:state = failed
     xmlns:ixml = http://invisiblexml.org/NS)
{
    info   = 'ixml:1:2: syntax error
              ab
               ^'
    line   = 1
    column = 2
    pos    = 2
}
END